add_subdirectory(agastdetector)
add_subdirectory(akazedetectordescriptor)
add_subdirectory(boostdescriptor)
add_subdirectory(briskdetectordescriptor)
add_subdirectory(briefdescriptor)
add_subdirectory(daisydescriptor)
add_subdirectory(fastdetector)
add_subdirectory(freakdescriptor)
add_subdirectory(gfttdetector)
add_subdirectory(hogdescriptor)
add_subdirectory(latchdescriptor)
add_subdirectory(luciddescriptor)
add_subdirectory(lssdescriptor)
add_subdirectory(kazedetectordescriptor)
add_subdirectory(msddetector)
add_subdirectory(mserdetector)
add_subdirectory(orbdetectordescriptor)
add_subdirectory(siftdetectordescriptor)
add_subdirectory(stardetector)
add_subdirectory(surfdetectordescriptor)
add_subdirectory(vggdescriptor)
add_subdirectory(keypointsfilter)
add_subdirectory(evaluation)